RESOLVED FIXED119992
[Cairo] Canvas putImageData is not working as expected
https://bugs.webkit.org/show_bug.cgi?id=119992
Summary [Cairo] Canvas putImageData is not working as expected
Hurnjoo Lee
Reported 2013-08-18 21:24:57 PDT
ImageBufferCairo::putImageArray didn't perform pre-multiply in case of zero alpha value. If the alpha value is not 255, image data should always be pre-multiplied.
Attachments
patch (5.34 KB, patch)
2013-08-18 21:26 PDT, Hurnjoo Lee
no flags
fixed patch (5.40 KB, patch)
2013-08-18 21:32 PDT, Hurnjoo Lee
no flags
Fixed patch v2 (5.31 KB, patch)
2013-08-18 22:38 PDT, Hurnjoo Lee
no flags
fixed patch v3 (4.02 KB, patch)
2013-08-18 23:43 PDT, Hurnjoo Lee
darin: review+
patch for landing (4.01 KB, patch)
2013-08-19 19:17 PDT, Hurnjoo Lee
no flags
Hurnjoo Lee
Comment 1 2013-08-18 21:26:52 PDT
WebKit Commit Bot
Comment 2 2013-08-18 21:28:06 PDT
Attachment 209049 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/canvas/canvas-putImageData-zero-alpha-expected.txt', u'LayoutTests/fast/canvas/canvas-putImageData-zero-alpha.html', u'LayoutTests/platform/efl/fast/canvas/canvas-putImageData-zero-alpha-expected.png', u'LayoutTests/platform/gtk/fast/canvas/canvas-putImageData-zero-alpha-expected.png', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/cairo/ImageBufferCairo.cpp']" exit_code: 1 LayoutTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Hurnjoo Lee
Comment 3 2013-08-18 21:32:44 PDT
Created attachment 209050 [details] fixed patch
Hurnjoo Lee
Comment 4 2013-08-18 21:38:17 PDT
I'm sorry, there was some mistake. I will upload patch again.
Hurnjoo Lee
Comment 5 2013-08-18 22:38:05 PDT
Created attachment 209055 [details] Fixed patch v2
Chris Dumez
Comment 6 2013-08-18 23:09:48 PDT
Comment on attachment 209055 [details] Fixed patch v2 View in context: https://bugs.webkit.org/attachment.cgi?id=209055&action=review > LayoutTests/fast/canvas/canvas-putImageData-zero-alpha.html:6 > + background-color:blue; Can this be a ref test instead? > LayoutTests/fast/canvas/canvas-putImageData-zero-alpha.html:33 > + if (window.testRunner) { No need for curly brackets here.
Hurnjoo Lee
Comment 7 2013-08-18 23:43:56 PDT
Created attachment 209060 [details] fixed patch v3
Hurnjoo Lee
Comment 8 2013-08-18 23:49:14 PDT
(In reply to comment #6) Thanks for the review. > (From update of attachment 209055 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=209055&action=review > > > LayoutTests/fast/canvas/canvas-putImageData-zero-alpha.html:6 > > + background-color:blue; > > Can this be a ref test instead? Done. I added the ref test. > > > LayoutTests/fast/canvas/canvas-putImageData-zero-alpha.html:33 > > + if (window.testRunner) { > > No need for curly brackets here. Done.
Martin Robinson
Comment 9 2013-08-19 06:47:41 PDT
(In reply to comment #8) > (In reply to comment #6) > > Thanks for the review. Looks good to me, assuming this is how other ports work.
Hurnjoo Lee
Comment 10 2013-08-19 19:17:43 PDT
Created attachment 209148 [details] patch for landing
WebKit Commit Bot
Comment 11 2013-08-19 23:47:38 PDT
Comment on attachment 209148 [details] patch for landing Clearing flags on attachment: 209148 Committed r154316: <http://trac.webkit.org/changeset/154316>
WebKit Commit Bot
Comment 12 2013-08-19 23:47:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.