[Cairo] Canvas putImageData is not working as expected https://bugs.webkit.org/show_bug.cgi?id=119992

Patch by Hurnjoo Lee <hurnjoo.lee@samsung.com> on 2013-08-19
Reviewed by Darin Adler.

Source/WebCore:

ImageBufferCairo::putImageArray didn't perform pre-multiply in case of zero alpha value.
If the alpha value is not 255, image data should always be pre-multiplied.

Test: fast/canvas/canvas-putImageData-zero-alpha.html

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::ImageBuffer::putByteArray):

LayoutTests:

Add a ref test that ensures that putImageData of canvas with zero alpha work correctly.

* fast/canvas/canvas-putImageData-zero-alpha-expected.html: Added.
* fast/canvas/canvas-putImageData-zero-alpha.html: Added.

Canonical link: https://commits.webkit.org/137983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154316 268f45cc-cd09-0410-ab3c-d52691b4dbfc